--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -14,7 +14,7 @@
         }
     }
     .quote-container {
-        margin-top: 15px;
+        margin: 15px 0;
         width: 100%;
         position: relative;
         min-height: 25px;
